--- a/Autosort/main.hbs
+++ b/Autosort/main.hbs
@@ -7,6 +7,26 @@
 ID<pos=4em></pos><pos=5em>Anzahl</pos><pos=11em>Name</pos>
 {{#items @root.E.S @root.Data.SOURCE}}
 	<color=red>{{Id}}</color><pos=4em></pos><pos=5em><color=green>{{Count}}</color></pos><pos=11em><color=white>{{i18n Id}}</color></pos>
+	{{#test Id in ../ItemIds}}
+		<color=red>TODO: {{../Count}} x {{i18n ../Id}} -> {{../../ContainerName}}</color>
+		{{#test ../../Limit}}
+			{{#move ../. @root.E.S ../../ContainerName ../../Limit}}
+				<color=green>DONE: {{../../Count}} x {{i18n ../../Id}} -> {{../../../ContainerName}} (Limit: {{../../../Limit}})</color>
+			{{/move}}
+			{{#test ../../../OverflowContainer}}
+				<color=yellow>OVERFLOW: Moving to {{../../../OverflowContainer}}</color>
+				{{#move ../. @root.E.S ../../../OverflowContainer}}
+					<color=green>DONE: {{../../Count}} x {{i18n ../../Id}} -> {{../../../../OverflowContainer}} (Overflow)</color>
+				{{/move}}
+			{{else}}
+				<color=yellow>SKIPPED: Container {{../../../ContainerName}} reached limit of {{../../../Limit}}</color>
+			{{/test}}
+		{{else}}
+			{{#move ../. @root.E.S ../../ContainerName}}
+				<color=green>DONE: {{../../Count}} x {{i18n ../../Id}} -> {{../../../ContainerName}}</color>
+			{{/move}}
+		{{/test}}
+	{{/test}}
 {{/items}}
 {{@root.Data.SEPARATOR}}
 {{devices @root.E.S @root.Data.DBLCDNAME}}
@@ -17,23 +37,23 @@ ID<pos=4em></pos><pos=5em>Anzahl</pos><pos=11em>Name</pos>
 					{{#items @root.E.S @root.Data.SOURCE}}
 						{{#test Id in ../ItemIds}}
 							<color=red>TODO: {{../Count}} x {{i18n ../Id}} -> {{../../ContainerName}}</color>
-							{{#if ../../Limit}}
+							{{#test ../../Limit}}
 								{{#move ../. @root.E.S ../../ContainerName ../../Limit}}
 									<color=green>DONE: {{../../Count}} x {{i18n ../../Id}} -> {{../../../ContainerName}} (Limit: {{../../../Limit}})</color>
 								{{/move}}
-								{{#if ../../../OverflowContainer}}
+								{{#test ../../../OverflowContainer}}
 									<color=yellow>OVERFLOW: Moving to {{../../../OverflowContainer}}</color>
 									{{#move ../. @root.E.S ../../../OverflowContainer}}
 										<color=green>DONE: {{../../Count}} x {{i18n ../../Id}} -> {{../../../../OverflowContainer}} (Overflow)</color>
 									{{/move}}
 								{{else}}
 									<color=yellow>SKIPPED: Container {{../../../ContainerName}} reached limit of {{../../../Limit}}</color>
-								{{/if}}
+								{{/test}}
 							{{else}}
 								{{#move ../. @root.E.S ../../ContainerName}}
 									<color=green>DONE: {{../../Count}} x {{i18n ../../Id}} -> {{../../../ContainerName}}</color>
 								{{/move}}
-							{{/if}}
+							{{/test}}
 						{{/test}}
 					{{/items}}
 					{{split Lists ','}}
@@ -41,23 +61,23 @@ ID<pos=4em></pos><pos=5em>Anzahl</pos><pos=11em>Name</pos>
 							{{#items @root.E.S @root.Data.SOURCE}}
 								{{#test Id in (lookup @root.ids ../.)}}
 									<color=red>[LISTS]TODO: {{../Count}} x {{i18n ../Id}} -> {{../../../../ContainerName}}</color>
-									{{#if ../../../../Limit}}
+									{{#test ../../../../Limit}}
 										{{#move ../. @root.E.S ../../../../ContainerName ../../../../Limit}}
 											<color=green>[LISTS]DONE: {{../../Count}} x {{i18n ../../Id}} -> {{../../../../../ContainerName}} (Limit: {{../../../../../Limit}})</color>
 										{{/move}}
-										{{#if ../../../../../OverflowContainer}}
+										{{#test ../../../../../OverflowContainer}}
 											<color=yellow>[LISTS]OVERFLOW: Moving to {{../../../../../OverflowContainer}}</color>
 											{{#move ../. @root.E.S ../../../../../OverflowContainer}}
 												<color=green>[LISTS]DONE: {{../../Count}} x {{i18n ../../Id}} -> {{../../../../../../OverflowContainer}} (Overflow)</color>
 											{{/move}}
 										{{else}}
 											<color=yellow>[LISTS]SKIPPED: Container {{../../../../../ContainerName}} reached limit of {{../../../../../Limit}}</color>
-										{{/if}}
+										{{/test}}
 									{{else}}
 										{{#move ../. @root.E.S ../../../../ContainerName}}
 											<color=green>[LISTS]DONE: {{../../Count}} x {{i18n ../../Id}} -> {{../../../../../ContainerName}}</color>
 										{{/move}}
-									{{/if}}
+									{{/test}}
 								{{/test}}
 							{{/items}}
 						{{/each}}
